[tool.poetry]
name = "ihanebotproject"
version = "0.1.0"
description = ""
authors = ["Narashi <orenvady@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.18"
Pillow = "^9.0.0"
environs = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
